--- a/doc/dokumentasi.adoc
+++ b/doc/dokumentasi.adoc
@@ -11,7 +11,9 @@ Badan Pengembangan dan Pembinaan Bahasa (Badan Bahasa) serta Kementerian Pendidi
 KBBI Qt ingin memastikan bahwa pengguna dapat mengakses KBBI dalam keadaan luring melalui komputer atau laptop. Sebagai tambahan, KBBI Qt juga membawa PUEBI (Pedoman Umum Ejaan Bahasa Indonesia) yang bisa diakses melalui menu Ekstra pada _menu bar_ (lihat poin 4.4).
 
 == 2. Pemasangan KBBI Qt
-Beberapa kontributor telah memaketkan aplikasi KBBI Qt untuk CentOS/RHEL7, Fedora, Arch Linux, dan Debian beserta turunannya. Berikut cara instal melalui distro tersebut, ditambah cara instal dari _source code_ (_compile_ manual).
+Beberapa kontributor telah memaketkan aplikasi KBBI Qt untuk CentOS/RHEL7, Fedora, Arch Linux, Debian beserta turunannya, dan sistem operasi Windows.
+
+Berikut cara instal KBBI Qt di distro-distro tersebut, termasuk cara instal dari _source code_ (_compile_ manual), dan cara instal di Windows.
 
 === 2.1 CentOS/RHEL7
 ----
@@ -59,6 +61,9 @@ Untuk menghapus aplikasi:
 ----
 $ sudo make uninstall
 ----
+
+=== 2.6 Windows
+Berkas instalasi KBBI Qt untuk Windows hanyalah berkas arsip 7z. Untuk menginstalnya, cukup ekstrak berkas *KBBI-Qt Offline.7z* lalu jalankan KBBI Qt dengan KBBI-Qt.exe.
 
 == 3. Pengenalan Antarmuka
 image::gbr/pengenalan-antarmuka.png[antarmuka kbbi-qt]
