--- a/doc/dokumentasi.adoc
+++ b/doc/dokumentasi.adoc
@@ -11,7 +11,7 @@ Badan Pengembangan dan Pembinaan Bahasa (Badan Bahasa) serta Kementerian Pendidi
 KBBI Qt ingin memastikan bahwa pengguna dapat mengakses KBBI dalam keadaan luring melalui komputer atau laptop. Sebagai tambahan, KBBI Qt juga membawa PUEBI (Pedoman Umum Ejaan Bahasa Indonesia) yang bisa diakses melalui menu Ekstra pada _menu bar_ (lihat poin 4.4).
 
 == 2. Pemasangan KBBI Qt
-Beberapa kontributor telah memaketkan aplikasi KBBI Qt untuk CentOS/RHEL7, Fedora, Arch Linux, Debian beserta turunannya, dan sistem operasi Windows.
+Beberapa kontributor telah memaketkan aplikasi KBBI Qt untuk CentOS/RHEL7, Fedora, Arch Linux, Debian beserta turunannya, termasuk BlankOn (sebagai paket resmi), dan sistem operasi Windows.
 
 Berikut cara instal KBBI Qt di distro-distro tersebut, termasuk cara instal dari _source code_ (_compile_ manual), dan cara instal di Windows.
 
@@ -28,12 +28,26 @@ $ sudo dnf install KBBI-Qt
 ----
 
 === 2.3 Debian dan Distro Turunan Debian
+Untuk 32-bit:
+
 ----
-$ wget https://github.com/bgli/kbbi-qt/releases/download/v1.0-alpha/kbbi-qt_1.0.0-alpha-1_amd64.1.deb
-$ sudo dpkg -i kbbi-qt_1.0.0-alpha-1_amd64.deb
+$ wget https://github.com/bgli/kbbi-qt/releases/download/v1.0/kbbi-qt_1.0-1_i386.deb
+$ sudo dpkg -i kbbi-qt_1.0-1_i386.deb
 ----
 
-=== 2.4 Arch Linux
+Untuk 64-bit:
+
+----
+$ wget https://github.com/bgli/kbbi-qt/releases/download/v1.0/kbbi-qt_1.0-1_amd64.deb
+$ sudo dpkg -i kbbi-qt_1.0-1_amd64.deb
+----
+
+=== 2.4 BlankOn Linux
+----
+$ sudo apt install kbbi-qt
+----
+
+=== 2.5 Arch Linux
 ----
 $ yaourt -S kbbi-qt
 ----
@@ -46,7 +60,7 @@ $ cd kbbi-qt
 $ makepkg -si
 ----
 
-=== 2.5 Instal dari _source code_
+=== 2.6 Instal dari _source code_
 Untuk melakukan kompilasi, pastikan sistem operasi Anda sudah memiliki *GCC dengan dukungan C++*, *Qt5*, dan *qmake (qtchooser)*.
 ----
 $ git clone https://github.com/bgli/kbbi-qt.git
@@ -62,8 +76,8 @@ Untuk menghapus aplikasi:
 $ sudo make uninstall
 ----
 
-=== 2.6 Windows
-Berkas instalasi KBBI Qt untuk Windows hanyalah berkas arsip 7z. Untuk menginstalnya, cukup ekstrak berkas *KBBI-Qt Offline.7z* lalu jalankan KBBI Qt dengan KBBI-Qt.exe.
+=== 2.7 Windows
+Unduh dari https://github.com/bgli/kbbi-qt/releases/download/v1.0/kbbi-qt_1.0-1_win32.7z. Untuk menginstalnya, cukup ekstrak berkas **kbbi-qt_1.0-1_win32..7z** lalu jalankan KBBI Qt dengan KBBI-Qt.exe.
 
 == 3. Pengenalan Antarmuka
 image::gbr/pengenalan-antarmuka.png[antarmuka kbbi-qt]
